address issues with prefix enum in align, allow for single char matching on enums in ex convert

--- a/ux/res/style/Button.css
+++ b/ux/res/style/Button.css
@@ -6,7 +6,7 @@ Button {
     image-align:  left top, 900ms ease-in;
     text-color:   #fff;
     content:      "Text";
-    fill-area:    10l 10t 10r 80h;
+    fill-area:    l0 t0 r0 b0;
     opacity:      0.8;
 }
 
